--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,19 @@
     <description>Demo project for Spring Boot</description>
 
     <repositories>
-        <!--阿里云仓库-->
         <repository>
-            <id>aliyun</id>
+            <id>central</id>
+            <name>aliyun maven</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-        </repository>
-        <!--快照版本使用,正式版本无需添加此仓库-->
-        <repository>
-            <id>snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
+            <!-- 是否开启发布版构件下载 -->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <!-- 是否开启快照版构件下载 -->
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
