1、网页授权功能实现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,7 @@ wechat:
   mpAppId: wxc2e3a0a6e8cb64cc
   mpAppSecret: 401e7b286840dcf31aa900b0d43af9aa
   myToken: wechatAccess
+  domain:  http://frank.nat200.top
+
 
 debug: true
